# seo-analyzer

./: .gitignore  README.md  pyproject.toml  urls.txt
src/seo_analyzer/: __init__.py  analyzer.py  cli.py  report_generator.py
